--- a/src/Club/NewsBundle/Resources/views/AdminTicker/new.html.twig
+++ b/src/Club/NewsBundle/Resources/views/AdminTicker/new.html.twig
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_news_adminticker_new') }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_news_adminticker_new')} %}
 
 {% endblock %}
