--- a/src/Club/NewsBundle/Resources/views/AdminTicker/edit.html.twig
+++ b/src/Club/NewsBundle/Resources/views/AdminTicker/edit.html.twig
@@ -2,8 +2,5 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_news_adminticker_edit', {'id':ticker.id}) }}">
-{% include "ClubLayoutBundle:Default:form.html.twig" %}
-</form>
-
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_news_adminticker_edit', {'id':ticker.id})} %}
 {% endblock %}
