--- a/src/Club/NewsBundle/Resources/views/AdminTicker/index.html.twig
+++ b/src/Club/NewsBundle/Resources/views/AdminTicker/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <p class="box"><a href="{{ path('club_news_adminticker_new') }}" class="btn-create"><span>{% trans %}Create ticker{% endtrans %}</span></a></p>
 
-<table class="style">
+<table class="table">
   <thead>
     <tr>
       <th>{% trans %}Ticker{% endtrans %}</th>
