Removed recent matches on ranking page.

--- a/src/Club/LayoutBundle/Resources/views/Default/flash_warning.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_warning.html.twig
@@ -4,3 +4,10 @@
     {{ app.session.flash('warning') }}
 </div>
 {% endif %}
+
+{% if msg is defined %}
+<div class="alert alert-block">
+    <strong>{% trans %}Warning!{% endtrans %}</strong>
+    {{ msg }}
+</div>
+{% endif %}
