--- a/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
@@ -13,14 +13,13 @@
 {% endblock %}
 
 {% block body %}
-{% render "ClubMatchBundle:Match:Recent" with {'limit':7} %}
 
 {% for ranking in rankings %}
   <h3><a href="{{ path('club_ranking_ranking_show', {'id':ranking.id}) }}">{{ ranking.name }}</a></h3>
   {% render "ClubRankingBundle:Ranking:Top" with {'id':ranking.id, 'limit':ranking_view_top} %}
 
 {% else %}
-  <p class="msg info">{% trans %}There are no rankings.{% endtrans %}</p>
+  {% include "ClubLayoutBundle:Default:flash_warning.html.twig" with {'msg':'There are no rankings.'|trans} %}</p>
 {% endfor %}
 
 {% endblock %}
