Added remove match.

--- a/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
@@ -40,6 +40,6 @@
 </table>
 
 {% render "ClubRankingBundle:Ranking:Top" with {'id':ranking.id, 'limit':50} %}
-{% render "ClubRankingBundle:Ranking:RecentMatches" with {'id':ranking.id, 'limit':50} %}
+{% include "ClubMatchBundle:Match:recent_matches.html.twig" %}
 
 {% endblock %}
