--- a/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/index.html.twig
@@ -15,18 +15,20 @@
   <thead>
     <tr>
       <th>{% trans %}Group{% endtrans %}</th>
+      <th>{% trans %}Type{% endtrans %}</th>
       <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="2">&#160;</td>
+      <td colspan="3">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for group in groups %}
     <tr>
       <td>{{ group.groupName }} ( {{ group.users|length }} )</td>
+      <td>{{ group.groupType }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:group_link.html.twig" with {'url':path('club_user_admingroup_members', { 'id':group.id })} %}
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_group_edit', { 'id':group.id })} %}
@@ -35,7 +37,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="2">{% trans %}There are no groups.{% endtrans %}</td>
+    <td colspan="3">{% trans %}There are no groups.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
