Added autocomplete add user to group.

--- a/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminGroup:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
 <h2>{% trans %}Group{% endtrans %}</h2>
 
