--- a/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminGroup/members.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminGroup:header.html.twig" %}
+{% endblock %}
+
 {% block header %}
 <div class="page-header"><h1>{% trans with {'%group%':group.groupName} %}Group, %group%{% endtrans %}</h1></div>
 {% endblock %}
