--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
 <div class="page-header">
-    <h1><img class="img-polaroid" src="/clubmaster/web/bundles/clublayout/images/icons/32x32/basket.png" /> Checkout</h1>
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/basket.png') }}" /> {% trans %}Checkout{% endtrans %}</h1>
 </div>
 {% endblock %}
 
