--- a/src/Club/EventBundle/Resources/views/Event/show.html.twig
+++ b/src/Club/EventBundle/Resources/views/Event/show.html.twig
@@ -3,7 +3,7 @@
 {% block header %}<div class="page-header"><h1>{{ event.eventName }}</h1></div>{% endblock %}
 
 {% block pagenav %}
-{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+{% if is_granted('IS_AUTHENTICATED_FULLY') and event.isOpen %}
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
