--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -53,3 +53,5 @@ table.style th a { color: #FFF; }
 table.style td a { color: #000; }
 
 span.label a { color: #fff; }
+
+div.socialButtons div { float: left }
