--- a/src/Club/LayoutBundle/Resources/views/Default/facebook_like.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/facebook_like.html.twig
@@ -6,3 +6,5 @@
   js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId={{ facebook_api }}";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-like" data-href="http://demo.clubmaster.org" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
