--- a/src/Club/LayoutBundle/Resources/views/Default/facebook_like.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/facebook_like.html.twig
@@ -7,4 +7,4 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-like" data-href="http://demo.clubmaster.org" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
