Added dynamic data to match.

--- a/src/Club/LayoutBundle/Resources/views/Default/google_plus.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/google_plus.html.twig
@@ -1,5 +1,5 @@
 <!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone"></div>
+<div data-size="medium" class="g-plusone"></div>
 
 <!-- Place this tag after the last +1 button tag. -->
 <script type="text/javascript">
