--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -40,6 +40,7 @@
 
     {% block stylesheets %}{% endblock %}
     {% block javascripts %}{% endblock %}
+    {% block metatags %}{% endblock %}
 
 </head>
 <body>
