--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -12,7 +12,7 @@ Match: {{ match.teamOne.team.teamName }} - {{ match.teamTwo.team.teamName }}
 <meta property="og:url" content="{{ absolute_url }}" />
 <meta property="og:site_name" content="{{ absolute_homepage }}" />
 <meta property="fb:app_id" content="{{ facebook_api }}" />
-<meta property="og:image" content="{{ asset('bundles/clublayout/images/icons/32x32/medal_gold_1.png') }}" />
+<meta property="og:image" content="{{ absolute_homepage}}{{ asset('bundles/clublayout/images/icons/32x32/medal_gold_1.png') }}" />
 {% endblock %}
 
 {% block after_body %}
