--- a/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/blog.html.twig
@@ -1,6 +1,6 @@
 <h3><a href="{{ path('club_welcome_blog_show', {'blog_id':post.id}) }}">{{ post.title }}</a></h3>
 
-<h6>{% trans with {'%date%':post.createdAt|club_datetime,'%author%':post.user.name} %}Posted on %date% by %author%.{% endtrans %}</h6>
+<h6>{% trans with {'%date%':post.createdAt|club_datetime,'%author%':post.user.name,'%link%':path('club_user_member_show', {'id':post.user.id})} %}Posted on %date% by <a href="%link%">%author%</a>.{% endtrans %}</h6>
 
 {% if post.user == app.user %}
 {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_welcome_blog_edit', {'id':post.id})} %}
