--- a/src/Club/WelcomeBundle/Resources/views/Blog/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/index.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block header %}
-<div class="page-header"><h1>{% trans %}Blog{% endtrans %}</h1></div>
+<div class="page-header"><h1><img src="{{ asset('bundles/clublayout/images/icons/32x32/transmit.png') }}" /> {% trans %}Blog{% endtrans %}</h1></div>
 {% endblock %}
 
 {% block body %}
