In colors view of we are participating an event.

--- a/src/Club/EventBundle/Resources/views/Dashboard/event_table.html.twig
+++ b/src/Club/EventBundle/Resources/views/Dashboard/event_table.html.twig
@@ -15,7 +15,7 @@
   </tfoot>
   <tbody>
   {% for event in events %}
-    <tr>
+    <tr class="{% if event.isAttending(app.user) %}success{% else %}warning{% endif %}">
       <td>{{ event.startDate|club_datetime }} - {{ event.stopDate|club_datetime }}</td>
       <td>{{ event.eventName }}</td>
       <td>
