--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -53,6 +53,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
 
+        {% if not is_granted('IS_AUTHENTICATED_FULLY') or app.user.hasAdminPrivilege %}
         <div class="span3">
             {% block leftmenu %}
             {% include "ClubLayoutBundle:Default:login_form.html.twig" %}
@@ -62,6 +63,13 @@
         </div><!--/span-->
 
         <div class="span9">
+
+        {% else %}
+
+        <div class="span12">
+
+        {% endif %}
+
 
             {% block header %}<div class="page-header"><h1>ClubMaster</h1></div>{% endblock %}
             {% block pagenav %}{% endblock %}
