Improved quick search form.

--- a/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
@@ -18,7 +18,9 @@
 
             {% endif %}
 
+            {% if not loop.last %}
             <li class="divider"></li>
+            {% endif %}
         {% endfor %}
 
     </ul>
