--- a/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/search_form.html.twig
@@ -1,10 +1,33 @@
-            {% if is_granted('ROLE_ADMIN') %}
-            <div class="well">
-                <h3>{% trans %}Search{% endtrans %}</h3>
-                <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search" class="form-search">
-                    {{ form_widget(form.user, { 'attr':{ 'class':'span9 search-query'} }) }}
-                    <button type="submit" class="btn">Search</button>
+{% if is_granted('ROLE_MEMBER_ADMIN') %}
+
+        <div class="navbar">
+            <div class="navbar-inner">
+                <div class="container">
+
+                    <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </a>
+
+                    <!-- Be sure to leave the brand out there if you want it shown -->
+                    <a class="brand" href="#">Project name</a>
+                    <form action="{{ path('club_user_filter_quick') }}" method="POST" id="search" class="navbar-search pull-right form-search">
+                        <div class="input-prepend">
+                            <button type="submit" class="btn">{% trans %}Search{% endtrans %}</button>
+                            {{ form_widget(form.user, { 'attr':{ 'class':'span2 search-query'} }) }}
+                        </div>
+
                     {{ form_rest(form) }}
-                </form>
+                    </form>
+
+                    <!-- Everything you want hidden at 940px or less, place within here -->
+                    <div class="nav-collapse">
+                    <!-- .nav, .navbar-search, .navbar-form, etc -->
+                    </div>
+                </div>
             </div>
-            {% endif %}
+        </div>
+
+{% endif %}
