Added global variable to twig.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -87,7 +87,7 @@
 
       <hr>
       <footer>
-          <p><a href="http://www.clubmaster.org" target="_open">ClubMaster</a>, {% render "ClubUserBundle:Misc:versionBar" %}</p>
+          <p><a href="http://www.clubmaster.org" target="_open">ClubMaster</a>, {{ club_version }}</p>
       </footer>
     </div><!--/container-fluid -->
 
