--- a/src/Club/WelcomeBundle/Resources/views/base.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/base.html.twig
@@ -2,6 +2,6 @@
 
 {% block header %}
 <div class="page-header">
-    <h1>{% trans %}Welcome{% endtrans %}</h1>
+    <h1>{{ club_title }}</h1>
 </div>
 {% endblock %}
