--- a/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
@@ -5,7 +5,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_request_playermarket_new') }}">{% trans %}Create request{% endtrans %}</a></li>
+            <li><a href="{{ path('club_exchange_exchange_new') }}">{% trans %}Create request{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
@@ -31,14 +31,14 @@
   <tbody>
   {% for item in market %}
     <tr>
-      <td>{{ item.playtime|club_datetime }}</td>
+      <td>{{ item.playtime|club_ago }}</td>
       <td>{{ item.user.name }}</td>
       <td>{{ item.requestComments|length }}</td>
       <td>
-      {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_request_comment_index', { 'id':item.id })} %}
+      {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_exchange_comment_index', { 'id':item.id })} %}
       {% if item.user == app.user %}
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_request_playermarket_edit', { 'id':item.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_request_playermarket_delete', { 'id':item.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_exchange_exchange_edit', { 'id':item.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_exchange_exchange_delete', { 'id':item.id })} %}
       {% endif %}
       </td>
     </tr>
