--- a/src/Club/MailBundle/Resources/views/Template/exchange_comment.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/exchange_comment.html.twig
@@ -1,6 +1,6 @@
-Dear {{ comment.request.user.profile.name }},
+Dear {{ comment.exchange.user.profile.name }},
 
-You have a request in exchange at {{ comment.request.playTime|club_datetime }}.
+You have a request in exchange at {{ comment.exchange.playTime|club_datetime }}.
 
 {{ comment.user.name }} has just responded to your request with:
 
