--- a/src/Club/ExchangeBundle/Resources/views/Comment/index.html.twig
+++ b/src/Club/ExchangeBundle/Resources/views/Comment/index.html.twig
@@ -5,7 +5,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_exchange_comment_new', {'id':request.id}) }}">{% trans %}Create comment{% endtrans %}</a></li>
+            <li><a href="{{ path('club_exchange_comment_new', {'id':exchange.id}) }}">{% trans %}Create comment{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
@@ -13,28 +13,30 @@
 {% endblock %}
 
 {% block body %}
-<table class="table">
+<table class="table table-bordered">
   <tbody>
     <tr>
       <th>{% trans %}Play time{% endtrans %}</th>
-      <td>{{ request.playtime|club_datetime }} ({{ request.playtime|club_ago }})</td>
+      <td>{{ exchange.playtime|club_datetime }} ({{ exchange.playtime|club_ago }})</td>
     </tr>
     <tr>
       <th>{% trans %}User{% endtrans %}</th>
-      <td>{{ request.user.name }}</td>
+      <td>{{ exchange.user.name }}</td>
+    </tr>
+    <tr>
+      <th>{% trans %}Message{% endtrans %}</th>
+      <td>{{ exchange.message|raw }}</td>
     </tr>
   </tbody>
 </table>
 
-<h3>{% trans %}Message{% endtrans %}</h3>
-<p>{{ request.message|raw }}</p>
 
-<h4>{% trans %}Comments{% endtrans %}</h4>
-{% for comment in request.requestComments %}
+<h1 class="page-header">{% trans %}Comments{% endtrans %}</h1>
+{% for comment in exchange.exchangeComments %}
 <p><span class="label label-03">{% trans with {'%date%':comment.createdAt|club_datetime,'%author%':comment.user.name} %}Posted on %date% by %author%.{% endtrans %}</span></p>
 <p>{{ comment.comment|raw }}</p>
 {% else %}
-<p>{% trans %}There are no comments for this request.{% endtrans %}</p>
+<p>{% trans %}There are no comments for this exchange.{% endtrans %}</p>
 {% endfor %}
 
 {% endblock %}
