--- a/src/Club/ExchangeBundle/Resources/views/Exchange/edit.html.twig
+++ b/src/Club/ExchangeBundle/Resources/views/Exchange/edit.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_exchange_exchange_edit', {'id':request.id})} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_exchange_exchange_edit', {'id':exchange.id})} %}
 
 {% endblock %}
