--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -70,7 +70,9 @@
 
         {% endif %}
 
+            {% if is_granted('ROLE_MEMBER_ADMIN') %}
             {% render "ClubLayoutBundle:Misc:Search" %}
+            {% endif %}
 
             {% block header %}<div class="page-header"><h1>{{ club_title }}</h1></div>{% endblock %}
             {% block pagenav %}{% endblock %}
