--- a/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
@@ -19,6 +19,7 @@
     <tr class="bg">
       <th>{% trans %}Open{% endtrans %}</th>
       <th>{% trans %}Play time{% endtrans %}</th>
+      <th>{% trans %}Location{% endtrans %}</th>
       <th>{% trans %}User{% endtrans %}</th>
       <th>{% trans %}Comments{% endtrans %}</th>
       <th class="action">{% trans %}Action{% endtrans %}</th>
@@ -26,7 +27,7 @@
   <thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="5">&#160;</td>
+      <td colspan="6">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
@@ -34,6 +35,7 @@
     <tr class="{% if item.closed %}error{% else %}success{% endif %}">
       <td>{% include "ClubLayoutBundle:Default:boolean_inverse.html.twig" with {'flag':item.closed} %}</td>
       <td><a href="{{ path('club_exchange_comment_index', {'id':item.id}) }}">{{ item.playtime|club_datetime }} ({{ item.playtime|club_ago }})</a></td>
+      <td>{{ item.location.locationName }}</td>
       <td>{{ item.user.name }}</td>
       <td>{{ item.exchangeComments|length }}</td>
       <td>
@@ -46,7 +48,7 @@
     </tr>
   {% else %}
     <tr>
-      <td colspan="5">{% trans %}There are not requests in the exchange.{% endtrans %}</td>
+      <td colspan="6">{% trans %}There are not requests in the exchange.{% endtrans %}</td>
     </tr>
   {% endfor %}
   </tbody>
