--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -23,15 +23,17 @@
 {% endblock %}
 
 {% block body %}
-<form method="POST" action="{{ path('club_booking_overview') }}">
-<h2>{{ date|club_date('full') }} <input type="hidden" name="date" id="date" /></h2>
-</form>
+<h2>{{ date|club_date('full') }}</h2>
 
+<form method="POST" action="{{ path('club_booking_overview') }}">
 <p>
 {% for item in nav %}
-    <a class="btn" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
+    <a class="btn btn-info btn-large" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
 {% endfor %}
+
+<input type="hidden" name="date" id="date" class="pull-right" />
 </p>
+</form>
 
 <p>
     <a class="link" id="prev"><img src="{{ asset('bundles/clublayout/images/icons/32x32/arrow_left.png') }}" /></a>
