Added lots of information to coming evnts.

--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -4,4 +4,7 @@
 
 {{ output|raw }}
 
+<h2>{% trans %}Coming Activities{% endtrans %}</h2>
+{% include "ClubUserBundle:Dashboard:activities_table.html.twig" %}
+
 {% endblock %}
