--- a/src/Club/UserBundle/Resources/views/Member/show.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/show.html.twig
@@ -29,29 +29,6 @@
 </table>
 
 <h1>{% trans %}Activities{% endtrans %}</h1>
-<table class="table">
-    <tr>
-        <th>{% trans %}Type{% endtrans %}</th>
-        <th>{% trans %}Date{% endtrans %}</th>
-        <th>{% trans %}Message{% endtrans %}</th>
-        <th>{% trans %}Action{% endtrans %}</th>
-    </tr>
-    {% for item in activities %}
-
-    <tr>
-        <td><img src="{{ asset(item.type) }}" /></td>
-        <td>{{ item.date|club_datetime }}</td>
-        <td>{{ item.message }}</td>
-        <td>{% if item.link is defined %}
-            {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':item.link} %}
-        {% endif %}</td>
-    </tr>
-    {% else %}
-
-    <tr>
-        <td colspan="3">{% trans %}The user has no activities.{% endtrans %}</td>
-    </tr>
-    {% endfor %}
-</table>
+{% include "ClubUserBundle:Dashboard:activities_table.html.twig" %}
 
 {% endblock %}
