--- a/src/Club/TeamBundle/Resources/views/Dashboard/team_message.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Dashboard/team_message.html.twig
@@ -1,1 +1,5 @@
+{% if schedule.firstDate > date() %}
+{% trans with {'%team%':schedule.teamCategory.teamName} %}Is attending %team%{% endtrans %}
+{% else %}
 {% trans with {'%team%':schedule.teamCategory.teamName} %}Was attending %team%{% endtrans %}
+{% endif %}
