Added events attended to member view.

--- a/src/Club/EventBundle/Resources/views/Dashboard/event_message.html.twig
+++ b/src/Club/EventBundle/Resources/views/Dashboard/event_message.html.twig
@@ -1,1 +1,5 @@
+{% if event.startDate > date() %}
 {% trans with {'%title%':event.eventName} %}Event is coming: %title%{% endtrans %}
+{% else %}
+{% trans with {'%title%':event.eventName} %}Attended event: %title%{% endtrans %}
+{% endif %}
